--- a/style.css
+++ b/style.css
@@ -1,24 +1,20 @@
 body{
   padding: 0px;
   margin: 0px;
-  display: flex;
-  flex-direction: column;
   background-color: #333; 
   
 
 }
 
 nav ul {
+
   display: flex;
-  
-  
 }
 
 nav li{
-  
   padding: 30px;
   list-style-type: none;
-  
+ 
 }
 
 header{
@@ -28,116 +24,253 @@ header{
   align-items: center;
   width: 100%;
   
-  height: 100px;
-  background-color: #2F4F4F;
+  height: 150px;
+  background-color: #D3D3D3;
+  
 }
+
 .logo{
-  width: 200px;
+  width: 300px;
   height: 200px;
   object-fit: contain;
   
 }
-.combo{
-  padding: 10px;
-  display: flex;
-  justify-content: center;
-  border: 3px solid black;
-  height: 470px;
-  background-color: #000000;
+
+
+.icolupa{
+  padding-top: 8px;
+  width: 30px;
 }
 
-.combo img{
-  height: 600px;
-  width: 70%;
-  margin-top: -40px;
+.box-pesquisa{
+
+  border-radius: 8px;
+  display: inline-block; 
+  transition: transform 0.3s ease, color 0.3s ease; 
+  outline: none;
+  padding: 3px;
+  width: 350px;
+  height: 37px;
+  font-size: 20px;
+  font-family: sans-serif;
 }
 
-div{
-  display: flex;
-  align-items: center;
+.box-pesquisa:hover{
+  transform: translateY(-3px);
+cursor: pointer;
 }
 
 a{
-  color: gold;
+  color: black;
   text-decoration: none;
-  display: inline-block; /* Necessário para aplicar transform */
-  transition: transform 0.3s ease, color 0.3s ease; /* Suaviza o movimento */
+  display: inline-block; 
+  transition: transform 0.3s ease, color 0.3s ease; 
+  font-size: 20px;
+  font-family: sans-serif;
 }
 
 a:hover{
   cursor: pointer;
   color: darkgoldenrod;
-  transform: translateY(-5px);/* Move o texto 5px para cima */
+  transform: translateY(-5px);
 }
 
 
-input{
-  border-radius: 8px;
-  display: inline-block; /* Necessário para aplicar transform */
-  transition: transform 0.3s ease, color 0.3s ease; /* Suaviza o movimento */
-  outline: none;
-  padding: 3px;
-  
-}
 
-
-input:hover{
-  transform: translateY(-3px);/* Move o texto 5px para cima */
-  cursor: pointer;
-
-}
-
-
-.img-compr  {
-
-  position: absolute;
-  top: 140%;
-  left: 15%;
-  gap: 20px;
-  padding: 20px;
-  
-}
-
-.img-compr2{
-  position: absolute;
-  gap: 20px;
-  top: 80%;
-  left: 15%;
-  padding: 20px;
-
-}
-
-.imagem-item, .imagem-item2 {
+.container-titulo{
   display: flex;
+  justify-content: center;
+}
+
+.container-titulo h2{
+ color: white;
+ font-size: 40px;
+ font-family: sans-serif;
+}
+
+
+
+
+
+.combobox img{
+  width: 100%;
+  height:1000px;
+}
+
+.boximg-meio img{
+  width: 100%;
+}
+
+footer {
+
+  background-color: #333;
+  color: white;           
+  text-align: center;     
+  padding: 20px 0;        
+  margin-top: auto;       
+}
+
+
+footer a {
+  color: #fff;          
+  text-decoration: none; 
+  margin: 0 10px;        
+}
+
+
+
+
+
+
+main{
+  display: flex;
+  justify-content: center;
+  /* border: 3px solid yellow;  */
+  padding-top: 40px; 
+  margin-top: 50px;
+}
+
+section{
+  display: flex;
+  justify-content: center;
+  /* border: 3px solid black; */
   flex-direction: column;
-  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Suaviza o movimento e sombra */
+}
+
+.container-img, .container-img2{
+  /* border: 2px solid black; */
+  display: flex;
+  gap: 40px;
+  margin-bottom: 40px;
+  padding: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 
-
-.imagem-item img, .imagem-item2 img {
-  width: 250px; 
-  height: auto;
+.imagem-item {
+  /* border: 2px solid blue; */
   border-radius: 8px; 
+  background-color: aliceblue; 
+  transition: transform 0.3s ease, box-shadow 0.3s ease; 
+  height: auto;
+ text-align: center;
+ display: flex;
+ flex-direction: column;
+ width: 350px;
+ 
+ 
 }
 
-.imagem-item:hover, .imagem-item2:hover {
-  transform: scale(1.1) translateY(-10px); /* Efeito de aumento e movimento para cima */
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Sombra para destacar */
-  cursor: pointer;
+.imagem-item div{
+  margin-top: 10px;
+  font-size: 25px;
 }
 
+.imagem-item img{
+  width: 200px; 
+  height: auto;
+  margin-top: 10px;
+  padding-left: 70px;
+ 
+  border-radius: 10px;
+  display: block;
+  
+}
 
+.imagem-item:hover{
+  transform: scale(1.1) translateY(-10px); 
+box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); 
+cursor: pointer;
+}
+
+.container-img2{
+  /* border: 2px solid black; */
+  display: flex;
+  gap: 40px;
+  padding: 20px;
+
+  
+  
+}
 
 span{
-  color: beige;
+  color: black;
+  display: block;
+  font-size: 17px;
+
 }
 
 .preco{
   color: yellow;
 }
 
-.icolupa{
-  padding-top: 8px;
-  width: 20px;
+
+
+
+.box-inf{
+  
+  display: flex;
+  justify-content: center;
+  background-color: aqua;
 }
+
+
+
+button{
+  background-color: green;
+  height: 50px;
+  width: 300px;
+  border-radius: 8px;
+  font-size: 20px;
+  color: white;
+}
+
+button:hover{
+  cursor: pointer;
+  background-color: darkgreen;
+}
+
+
+#inf-produto{
+  display: block;
+  /* border: 1px solid black; */
+  
+}
+
+#box-avaliação {
+  display: flex;
+  list-style-type: none;
+  color: rgb(136, 136, 25);
+  margin-left: 10px;
+  margin-bottom: 4px;
+  /* border: 1px solid black; */
+  width: 120px;
+ 
+}
+
+.beneficios li{
+  list-style-type: none;
+  padding: 3px;
+  font-size: 16px;
+  
+}
+
+#preco{
+  color: #1E90FF;
+  font-size: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
